# hrc_simulator_skills

./: .gitignore
hrc_mosaic_test/: CMakeLists.txt  package.xml
hrc_mosaic_test/config/: agents.yaml  boxes_description.yaml  boxes_distribution.yaml  boxes_distribution_fake.yaml  go_to_location_server.yaml  goto_server.yaml  inbound_ik_solutions.yaml  inbound_server.yaml  locations_distribution.yaml  mosaic_2x2.yaml  mosaic_basic.yaml  mosaic_ik_solutions.yaml  mosaic_tcybernetics.yaml  multi_skills.yaml  objects_description.yaml  objects_description_tcybernetics.yaml  objects_distribution.yaml  objects_distribution_tcybernetics.yaml  objects_grasp_description.yaml  objects_grasp_description_tcybernetics.yaml  outbound_mosaic.yaml  outbound_pallet.yaml  outbound_server.yaml  pick_place_test.yaml  recipe.yaml  recipe_sincro.yaml  slots_distribution.yaml  slots_distribution_tcybernetics.yaml  static_scene.yaml  test_object_positions.yaml
hrc_mosaic_test/config/agents_synergy_test/: add_end_task_to_task_properties.py  boxes_distribution.yaml  (+6 more)
hrc_mosaic_test/launch/: goto.launch  interface_goto.launch  interface_pick.launch  interface_place.launch  interface_skills.launch  object_management.launch  pick.launch  pick_place_test.launch  place.launch  save_example_param_on_mongo.launch  save_param_on_mongo_tcybernetics.launch  skills.launch  skills_agents_synergy_test.launch  skills_tcybernetics.launch  start_interface.launch  static_scene.launch  test_objects_spawner.launch  test_recipe.launch
hrc_mosaic_test/src/: node.cpp  test_asincro.cpp  test_sincro.cpp
